app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}
.nav a {
  @apply h-full flex flex-row items-center p-8;
  @apply shadow-white hover:shadow-white shadow-[inset_0_-2px_0_0] hover:shadow-[inset_0_-6rem_0_0];
  @apply hover:text-black transition-all duration-500 ease-in-out;
}

.prose {
  h1 { @apply border-blue-400 border-b-4 pb-1 before:content-["#"] before:me-1 after:content-["//_Level_1"] after:ms-1 after:text-sm; ; }
  h2 { @apply border-blue-400 border-b-4 pb-1 before:content-["#"] before:me-1 after:content-["//_Level_2"] after:ms-1 after:text-sm; ; }
  h3 { @apply border-blue-400 border-b-2 pb-1 before:content-["#"] before:me-1 after:content-["//_Level_3"] after:ms-1 after:text-xs; ; }
  h4 { @apply border-blue-400 border-b-2 pb-1 before:content-["#"] before:me-1 after:content-["//_Level_4"] after:ms-1 after:text-xs; ; }
  h5 { @apply border-blue-400 border-b-2 before:content-["#"] before:me-1 after:content-["//_Level_5"] after:ms-1 after:text-xs; }
  h6 { @apply border-blue-400 border-b-2 before:content-["#"] before:me-1 after:content-["//_Level_6"] after:ms-1 after:text-xs; }
}

.icon-link {
  @apply text-sm icon-mdi-light-link-variant mx-0.5 align-middle;
}

a[href^='http'] {
  @apply after:icon-material-symbols-light-open-in-new after:mx-0.5 after:align-middle;
}

